--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <nav>
         <div class="nav-left">
-            <img src="images/logo.png" class="logo" alt="site-logo">
+            <a href="index.html">
+                <img src="images/logo.png" class="logo" alt="site-logo">
+            </a>
             <ul>
                 <li><img src="images/notification.png" alt="notification-icon"></li>
                 <li><img src="images/inbox.png" alt="inbox-icon"></li>
@@ -30,7 +32,7 @@
             </div>
         </div>
 
-        <!-- Settings Menu -->
+        <!-- Drop Down Settings Menu -->
         <div class="settings-menu">
 
             <div id="dark-btn">
@@ -42,7 +44,7 @@
                     <img src="images/profile-pic.png" alt="user-profile-pic">
                     <div>
                         <p>John Nicholson</p>
-                        <a href="#">See your profile</a>
+                        <a href="profile.html">See your profile</a>
                     </div>
                 </div>
                 <hr>
